Add extra.properties.file as an option
The property extra.properties.file can be set to provide an extra spring resource property file to be included in the application. This may be useful if you have some properties being managed by puppet with a file name that can't  be managed by spring profiles.

This resolves #9

--- a/src/test/resources/application-docker-integration-test.properties
+++ b/src/test/resources/application-docker-integration-test.properties
@@ -9,3 +9,6 @@ bridge.config.location=classpath:test-bridge-config.json
 
 aws.sqs.endpoint.url=http://localsqs:9324
 aws.sqs.aws.region=elasticmq
+
+aws.credentials.secretKey=x
+aws.credentials.accessKey=x
