--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -25,3 +25,6 @@ bridge.config.location=classpath:test-bridge-config.json
 
 aws.sqs.endpoint.url=http://localhost:9324
 aws.sqs.aws.region=localhost
+
+aws.credentials.secretKey=x
+aws.credentials.accessKey=x
