--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,3 +60,5 @@ cloud.aws.stack.auto=false
 cloud.aws.region.auto=false
 cloud.aws.credentials.accessKey=${aws.credentials.accessKey}
 cloud.aws.credentials.secretKey=${aws.credentials.secretKey}
+
+default.incoming.message.id.key=uniqueReference
