Change the previous commit to not pass through messageIds.
We felt that it wasn't necessarily right to default it to on.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,4 +61,4 @@ cloud.aws.region.auto=false
 cloud.aws.credentials.accessKey=${aws.credentials.accessKey}
 cloud.aws.credentials.secretKey=${aws.credentials.secretKey}
 
-default.incoming.message.id.key=uniqueReference
+default.incoming.message.id.key=#{null}
