Improve dead-lettering support (#35)
* Improve dead-lettering support

- This fixes #33
- Automatically retry on the forwarders for any AmazonSDK exception
  as they are most likely recoverable
- Deadletter on any other exception
- Turn on retries by default

Co-authored-by: mselvaku <mselvakumar@tyro.com>

--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,10 @@
             <version>${spring-cloud.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.bazaarvoice.jolt</groupId>
             <artifactId>jolt-core</artifactId>
             <version>${latest.jolt.version}</version>
