--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,6 +51,13 @@ spring.rabbitmq.listener.simple.default-requeue-rejected=true
 spring.rabbitmq.listener.simple.concurrency=5
 spring.rabbitmq.listener.simple.max-concurrency=10
 
+# Whether publishing retries are enabled.
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.initial-interval=1000ms
+spring.rabbitmq.listener.simple.retry.max-attempts=30000
+spring.rabbitmq.listener.simple.retry.max-interval=60000ms
+spring.rabbitmq.listener.simple.retry.multiplier=2
+
 spring.rabbitmq.connection-timeout=2s
 spring.rabbitmq.requested-heartbeat=30s
 spring.rabbitmq.template.receive-timeout=5s
