Tagging for 0.9.0 release

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>com.tyro.oss</groupId>
     <artifactId>rabbit-amazon-bridge</artifactId>
-    <version>0.9.0-SNAPSHOT</version>
+    <version>0.9.0</version>
     <packaging>jar</packaging>
 
     <name>${project.artifactId}</name>
