Removing custom aws credential properties. (#38)
- The default spring ones should be used instead
- If custom ones are required specify them as they were before
  e.g. cloud.aws.credentials.accessKey=${aws.credentials.accessKey}

Fixes #8

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -26,5 +26,6 @@ bridge.config.location=classpath:test-bridge-config.json
 aws.sqs.endpoint.url=http://localhost:9324
 aws.sqs.aws.region=localhost
 
-aws.credentials.secretKey=x
-aws.credentials.accessKey=x
+cloud.aws.credentials.accessKey=x
+cloud.aws.credentials.secretKey=x
+
