--- a/src/test/resources/application-docker-integration-test.properties
+++ b/src/test/resources/application-docker-integration-test.properties
@@ -10,5 +10,5 @@ bridge.config.location=classpath:test-bridge-config.json
 aws.sqs.endpoint.url=http://localsqs:9324
 aws.sqs.aws.region=elasticmq
 
-aws.credentials.secretKey=x
-aws.credentials.accessKey=x
+cloud.aws.credentials.accessKey=x
+cloud.aws.credentials.secretKey=x
