Setting a json logger as our default (#42)
* Setting a json logger as our default

Fixes #37

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -67,3 +67,4 @@ cloud.aws.stack.auto=false
 cloud.aws.region.auto=false
 
 default.incoming.message.id.key=#{null}
+logging.config=classpath:default-logback.xml
