20 migrating to spring boot starter parent (#46)
* Switching to the spring-boot-parent-starter

- bean overriding is disable by default so we had to enable it manually
- had to switch out a few dependencies as their org id had changed
- Removed commons-logging it doesn't look like it is needed
- Up the version of spring-cloud dependencies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,11 +14,12 @@
 # limitations under the License.
 #
 
-#common properties used across our applications
 artifact.id=rabbit-amazon-bridge
 artifact.version=${version:LATEST}
 
 spring.application.name=${artifact.id}
+
+spring.main.allow-bean-definition-overriding=true
 
 server.port=8960
 server.servlet.context-path=/rabbit-amazon-bridge
