--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,9 @@
     </scm>
 
     <parent>
-        <groupId>io.spring.platform</groupId>
-        <artifactId>platform-bom</artifactId>
-        <version>Cairo-SR3</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.2.RELEASE</version>
     </parent>
 
     <licenses>
@@ -62,7 +62,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <kotlin.version>1.3.10</kotlin.version>
-        <spring-cloud.version>2.0.0.RELEASE</spring-cloud.version>
+        <spring-cloud.version>2.0.1.RELEASE</spring-cloud.version>
         <start-class>com.tyro.oss.rabbit_amazon_bridge.RabbitAmazonBridgeApplicationKt</start-class>
         <logback.version>1.2.3</logback.version>
         <guava.version>25.0-jre</guava.version>
@@ -257,8 +257,8 @@
             <artifactId>apache-el</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.el</groupId>
-            <artifactId>javax.el-api</artifactId>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.el</artifactId>
         </dependency>
         <dependency>
             <groupId>javax.validation</groupId>
@@ -311,15 +311,11 @@
             <artifactId>spring-beans</artifactId>
         </dependency>
         <dependency>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
         <dependency>
