23 create docker release (#49)
Pushing releases to dockerhub

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,13 @@ jobs:
     - stage: build
       script:
       - make build
+
+deploy:
+  - provider: script
+    script: bash scripts/deploy.sh latest
+    on:
+      branch: master
+  - provider: script
+    script: bash scripts/deploy.sh $TRAVIS_TAG
+    on:
+      tags: true
